Bug fix in the "deep learning" documentation
Just a minor bug, but the input for numpy.zeros seems to have accidentally been added as two separate integers instead of a tuple containing both integers (the shape).

--- a/website/docs/usage/deep-learning.jade
+++ b/website/docs/usage/deep-learning.jade
@@ -136,7 +136,7 @@ p
         return vectors
 
     def get_features(docs, max_length):
-        Xs = numpy.zeros(len(list(docs)), max_length, dtype='int32')
+        Xs = numpy.zeros((len(list(docs)), max_length), dtype='int32')
         for i, doc in enumerate(docs):
             for j, token in enumerate(doc[:max_length]):
                 Xs[i, j] = token.rank if token.has_vector else 0
